<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>botanbot_bringup</name>
    <version>0.0.2</version>
    <description>
    ROS 2 launch scripts for starting the botanbot
  </description>
    <license>Apache 2.0</license>
    <author email="fetulahatas1@gmail.com">Fetullah Atas</author>
    <maintainer email="fetulahatas1@gmail.com">Fetullah Atas</maintainer>
    <url type="repository">https://github.com/jediofgever/ROS_CB</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>hls_lfcd_lds_driver</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>botanbot_description</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
