<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>botanbot_description</name>
  <version>0.0.0</version>
  <description>
    3D models of the botanbot for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="fetullah.atas@nmbu.no">Fetullah Atas</author>
  <maintainer email="fetullah.atas@nmbu.no">Fetullah Atas</maintainer>
  <url type="repository">https://github.com/jediofgever/OUTDOOR_NAV2</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
