<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>botanbot_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo simulation package for the Botanbot. This package contains Gazebo related stuff in order to simulate a 
    ackermann drive 4 wheeled agricultural robot, AKA Botanbot, the package also contains differnt Gazebo worlds, and sensors plugins 
    in order to achieve auto navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="fetullah.atas@nmbu.no">Fetullah Atas</author>
  <maintainer email="fetullah.atas@nmbu.no">Fetullah Atas</maintainer>
  <url type="repository">https://github.com/jediofgever/OUTDOOR_NAV2</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
