<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>botanbot_gps_waypoint_follower</name>
    <version>0.0.0</version>
    <description>Reads GPS waypoint from a file, converts them to map frame and navigates through the points
                 with FollowWaypoints server from `navigation2`</description>
    <maintainer email="fetualahatas1@gmail.com">Fetullah Atas</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>tf2_ros</depend>
    <depend>nav2_common</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav2_msgs</depend>
    <depend>nav2_util</depend>
    <depend>nav2_core</depend>
    <depend>nav2_gps_waypoint_follower</depend>
    <depend>geometry_msgs</depend>
    <depend>nav2_lifecycle_manager</depend>
    <depend>std_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>robot_localization</depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>